crates/capsec/tests/compile_fail/sendcap_cannot_grant_wrong_perm.stderr
error[E0277]: the trait bound `Cap<capsec::FsRead>: capsec::Has<capsec::NetConnect>` is not satisfied
  --> tests/compile_fail/sendcap_cannot_grant_wrong_perm.rs:11:15
   |
11 |     needs_net(&cap);
   |     --------- ^^^^ the trait `capsec::Has<capsec::NetConnect>` is not implemented for `Cap<capsec::FsRead>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `capsec::Has<P>`:
             `Cap<Ambient>` implements `capsec::Has<EnvRead>`
             `Cap<Ambient>` implements `capsec::Has<EnvWrite>`
             `Cap<Ambient>` implements `capsec::Has<FsAll>`
             `Cap<Ambient>` implements `capsec::Has<FsWrite>`
             `Cap<Ambient>` implements `capsec::Has<NetAll>`
             `Cap<Ambient>` implements `capsec::Has<NetBind>`
             `Cap<Ambient>` implements `capsec::Has<Spawn>`
             `Cap<Ambient>` implements `capsec::Has<capsec::FsRead>`
           and $N others
note: required by a bound in `needs_net`
  --> tests/compile_fail/sendcap_cannot_grant_wrong_perm.rs:5:23
   |
 5 | fn needs_net(_: &impl Has<NetConnect>) {}
   |                       ^^^^^^^^^^^^^^^ required by this bound in `needs_net`
